--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
 		"build": "vinxi build",
 		"start": "vinxi start",
 		"prisma-generate": "prisma generate",
-		"prisma-studio": "prisma studio"
+		"prisma-studio": "prisma studio",
+		"prisma-migrate": "prisma migrate dev",
+		"migrate:prod": "prisma migrate deploy"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
-		"@prisma/client": "5.22.0",
+		"@prisma/client": "6.8.2",
 		"@radix-ui/react-collapsible": "^1.1.11",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -29,7 +31,6 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.511.0",
-		"prisma": "^5.22.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.4",
@@ -47,6 +48,7 @@
 		"@types/react-dom": "^19.0.3",
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.3",
+		"prisma": "^6.8.2",
 		"tailwindcss": "^4.1.7",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.7.2",
