--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "personal-finance",
+	"name": "monfly",
 	"private": true,
 	"sideEffects": false,
 	"type": "module",
@@ -13,14 +13,18 @@
 		"migrate:prod": "prisma migrate deploy"
 	},
 	"dependencies": {
+		"@dicebear/collection": "~9.2.2",
+		"@dicebear/core": "~9.2.2",
 		"@hookform/resolvers": "^5.0.1",
 		"@prisma/client": "6.8.2",
+		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-collapsible": "^1.1.11",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tabs": "^1.1.12",
 		"@radix-ui/react-tooltip": "^1.2.7",
 		"@tanstack/react-query": "^5.77.0",
 		"@tanstack/react-router": "^1.120.5",
@@ -41,7 +45,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@tailwindcss/postcss": "^4.1.7",
+		"@tailwindcss/postcss": "^4.1.8",
 		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^22.5.4",
 		"@types/react": "^19.0.8",
@@ -49,7 +53,7 @@
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.3",
 		"prisma": "^6.8.2",
-		"tailwindcss": "^4.1.7",
+		"tailwindcss": "^4.1.8",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.7.2",
 		"vite-tsconfig-paths": "^5.1.4"
