--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
 		"@tanstack/react-router-devtools": "^1.120.6",
 		"@tanstack/react-start": "^1.120.5",
 		"@tanstack/start": "^1.120.5",
+		"@uidotdev/usehooks": "~2.4.1",
 		"bcrypt": "^6.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.511.0",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.4",
 		"redaxios": "^0.5.1",
+		"sonner": "^2.0.4",
 		"tailwind-merge": "^2.6.0",
 		"vinxi": "0.5.3",
 		"zod": "^3.25.28"
