--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.4",
+		"react-icons": "^5.5.0",
 		"recharts": "^2.15.3",
 		"redaxios": "^0.5.1",
 		"sonner": "^2.0.4",
