--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,5 @@
 	"[json]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
-	"cSpell.words": ["notionists", "Sonner"]
+	"cSpell.words": ["dicebear", "notionists", "Sonner"]
 }
