--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"prisma-studio": "prisma studio",
 		"prisma-migrate": "prisma migrate dev",
 		"migrate:prod": "prisma migrate deploy",
-		"install:legacy": "pnpm install --no-strict-peer-dependencies"
+		"install:legacy": "pnpm install --no-strict-peer-dependencies",
+		"test": "jest",
+		"test:watch": "jest --watch"
 	},
 	"dependencies": {
 		"@dicebear/collection": "~9.2.2",
@@ -56,14 +58,28 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@tailwindcss/postcss": "^4.1.8",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/react-hooks": "^8.0.1",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/bcrypt": "^5.0.2",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^22.5.4",
 		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
+		"@types/react-test-renderer": "^19.1.0",
+		"@types/testing-library__jest-dom": "^6.0.0",
 		"autoprefixer": "^10.4.21",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "30.0.0-beta.3",
+		"jsdom": "^26.1.0",
 		"postcss": "^8.5.3",
 		"prisma": "^6.8.2",
+		"react-test-renderer": "^19.1.0",
 		"tailwindcss": "^4.1.8",
+		"ts-jest": "^29.3.4",
+		"ts-node": "^10.9.2",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.7.2",
 		"vite-tsconfig-paths": "^5.1.4"
