--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["**/*.ts", "**/*.tsx"],
+	"include": ["**/*.ts", "**/*.tsx", "jest.config.cjs"],
 	"compilerOptions": {
 		"strict": true,
 		"esModuleInterop": true,
@@ -18,6 +18,7 @@
 			"~/*": ["./src/*"],
 			"@/*": ["./src/*"]
 		},
-		"noEmit": true
+		"noEmit": true,
+		"types": ["@testing-library/jest-dom"]
 	}
 }
