Add configuration files: Added .editorconfig, .npmrc, .nvmrc, CONTRIBUTING.md and prettier.config.cjs files to standardize project format and configurations. .prettierrc is removed and package.json is updated to include a formatting script. VSCode settings are also updated to improve the development experience.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,7 +43,14 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": ["dicebear", "logoutfn", "notionists", "Sonner"],
+  "cSpell.words": [
+    "dicebear",
+    "ianvs",
+    "logoutfn",
+    "notionists",
+    "pgsql",
+    "Sonner"
+  ],
   "editor.formatOnPaste": true,
   "editor.formatOnType": true,
   "formattingToggle.affects": ["editor.formatOnSave"]
