--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,8 @@
     "logoutfn",
     "notionists",
     "pgsql",
-    "Sonner"
+    "Sonner",
+    "vercel"
   ],
   "editor.formatOnPaste": true,
   "editor.formatOnType": true,
