feat: big refactor to make an stable version with charts and components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,6 @@
   ],
   "editor.formatOnPaste": true,
   "editor.formatOnType": true,
-  "formattingToggle.affects": ["editor.formatOnSave"]
+  "formattingToggle.affects": ["editor.formatOnSave"],
+  "tailwindCSS.experimental.configFile": "../src/styles/app.css"
 }
