--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
-    "build": "vinxi build",
+    "build": "vinxi build --preset vercel",
     "start": "vinxi start",
     "prisma-generate": "prisma generate",
     "prisma-studio": "prisma studio",
