Refactor ChartTransactionsByMonth component to use new Card component structure and improve loading/error handling
Update TimezoneBadge to change icon color to primary

Remove unnecessary console log from GlobalHeader

Fix import path for Header in header test file

Export Header component from index file for easier imports

Update layout component to import Header correctly

Add PageTitle component for consistent page headings and descriptions

Style SettingsDialog button icon with primary color

Remove unused MONO_THEMES constant from ThemeSelector

Handle error state in Sidebar component

Update transaction item display logic to show category when description is absent

Refactor TotalBalance component to handle balance as a string and improve input validation

Update AddTransaction component to use new Card structure

Improve transaction item display with conditional rendering for user info

Add category icons to transaction form options

Update sidebar routes to use icon components directly instead of JSX

Implement getUserById API function for fetching user details by ID

Add user detail route with loading and error handling

Update login and signup routes to use action text from authActions

Create utility function for fetching user by ID with error handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,7 +47,9 @@
     "dicebear",
     "ianvs",
     "logoutfn",
+    "Monfly",
     "notionists",
+    "nums",
     "pgsql",
     "Sonner",
     "vercel"
