--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "sideEffects": false,
   "type": "module",
+  "version": "1.0.1",
   "prisma": {
     "seed": "node prisma/seed.js"
   },
