--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@dicebear/core": "~9.2.2",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "6.8.2",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
