feat: implement font display selection feature with context provider and UI component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,5 @@
   ],
   "editor.formatOnPaste": true,
   "editor.formatOnType": true,
-  "formattingToggle.affects": ["editor.formatOnSave"],
-  "tailwindCSS.experimental.configFile": "../src/styles/app.css"
+  "formattingToggle.affects": ["editor.formatOnSave"]
 }
