--- a/components.json
+++ b/components.json
@@ -4,8 +4,8 @@
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.js",
-    "css": "src/styles/app.css",
+    "config": "",
+    "css": "./src/styles/app.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
