feat: enhance font selection by adding new font options and updating CSS variables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,10 +47,13 @@
     "dicebear",
     "ianvs",
     "logoutfn",
+    "Merriweather",
     "Monfly",
     "notionists",
     "nums",
     "pgsql",
+    "Playfair",
+    "Roboto",
     "Sonner",
     "vercel"
   ],
