feat: add ShinyButton and TextAnimate components for enhanced UI animations
- Introduced ShinyButton component with motion effects and customizable styles.
- Added TextAnimate component for animated text display with various animation types and configurations.
- Updated font display settings to include new color palettes and font options.
- Created Typography component for consistent text styling across the application.
- Implemented NavigationMenu component for improved navigation structure and accessibility.
- Enhanced routes for login and signup with new GoToHomeButton for better user experience.
- Updated app styles to include new font families and improved overall design.
- Added PNG module declaration for better asset handling in TypeScript.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,12 +45,15 @@
   },
   "cSpell.words": [
     "dicebear",
+    "Gantt",
     "ianvs",
     "logoutfn",
+    "magicui",
     "Merriweather",
     "Monfly",
     "notionists",
     "nums",
+    "Pacifico",
     "pgsql",
     "Playfair",
     "Roboto",
