chore: update project configuration and dependencies
- Update package.json with new dependencies and scripts
- Refresh pnpm-lock.yaml with latest dependency resolutions
- Update TypeScript configuration for better type support
- Add vite.config.mjs for improved build configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,11 @@
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "isolatedModules": true,
     "resolveJsonModule": true,
+    "strictNullChecks": true,
     "skipLibCheck": true,
     "target": "ES2022",
     "allowJs": true,
+    "verbatimModuleSyntax": false,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
@@ -19,6 +21,6 @@
       "@/*": ["./src/*"]
     },
     "noEmit": true,
-    "types": ["@testing-library/jest-dom"]
+    "types": []
   }
 }
