--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "sideEffects": false,
   "type": "module",
   "version": "1.0.1",
-  "prisma": {
-    "seed": "node prisma/seed.js"
-  },
   "scripts": {
-    "dev": "vinxi dev",
-    "build": "prisma generate && vinxi build --preset vercel",
+    "dev": "vite dev",
+    "build": "vite build",
     "start": "vinxi start",
     "prisma-generate": "prisma generate",
     "prisma-studio": "prisma studio",
@@ -24,99 +21,100 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@dicebear/collection": "~9.2.2",
-    "@dicebear/core": "~9.2.2",
-    "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "6.8.2",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@dicebear/collection": "~9.2.4",
+    "@dicebear/core": "~9.2.4",
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "6.18.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@tanstack/react-query": "^5.77.0",
-    "@tanstack/react-router": "^1.120.5",
-    "@tanstack/react-router-devtools": "^1.120.6",
-    "@tanstack/react-start": "^1.120.5",
-    "@tanstack/start": "^1.120.5",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.90.6",
+    "@tanstack/react-router": "^1.134.4",
+    "@tanstack/react-router-devtools": "^1.134.4",
+    "@tanstack/react-start": "^1.134.7",
+    "@tanstack/react-table": "8.21.3",
+    "@tanstack/start": "^1.120.20",
     "@uidotdev/usehooks": "~2.4.1",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "12.23.24",
     "lucide-react": "^0.511.0",
-    "motion": "^12.23.6",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^19.2.0",
+    "react-aria-components": "1.13.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.4",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.3",
+    "recharts": "^2.15.4",
     "redaxios": "^0.5.1",
-    "sonner": "^2.0.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "vinxi": "0.5.3",
-    "zod": "^3.25.28"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
-    "@tailwindcss/postcss": "^4.1.8",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@eslint/js": "^9.39.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.5.4",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/node": "^22.18.13",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@types/react-test-renderer": "^19.1.0",
-    "@types/testing-library__jest-dom": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.33.1",
-    "@typescript-eslint/parser": "^8.33.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "@vitejs/plugin-react": "5.1.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.28.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint": "^9.39.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-prisma": "^1.0.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-tailwindcss": "^3.18.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "globals": "^16.2.0",
+    "eslint-plugin-tailwindcss": "^3.18.2",
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "globals": "^16.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "30.0.0-beta.3",
     "jsdom": "^26.1.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.6",
     "prettier": "3.5.3",
-    "prisma": "^6.8.2",
-    "react-test-renderer": "^19.1.0",
-    "tailwindcss": "^4.1.8",
-    "ts-jest": "^29.3.4",
+    "prisma": "^6.18.0",
+    "react-test-renderer": "^19.2.0",
+    "tailwindcss": "^4.1.16",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "tw-animate-css": "^1.3.0",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.33.1",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2",
+    "vite": "7.1.12",
     "vite-tsconfig-paths": "^5.1.4"
-  },
-  "overrides": {
-    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
