--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 node_modules
+
+# Lock files - Package managers
 package-lock.json
 yarn.lock
+pnpm-lock.yaml
+shrinkwrap.yaml
+bun.lockb
 
 !.env
 .DS_Store
