refactor: update Vercel configuration by removing obsolete rewrites and consolidating build settings

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "rewrites": [
-    {
-      "source": "/:path((?!.*\\..*).*)",
-      "destination": "/index.html"
-    }
-  ]
+  "buildCommand": "pnpm run build",
+  "outputDirectory": ".vercel/output",
+  "framework": null,
+  "installCommand": "pnpm install"
 }
