refactor: update styling classes to use linear gradients and enhance Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
-  "buildCommand": "pnpm run build",
-  "installCommand": "pnpm install"
+  "framework": null,
+  "buildCommand": "pnpm prisma generate && pnpm run build",
+  "installCommand": "pnpm install",
+  "functions": {
+    "**/*.func/*": {
+      "runtime": "nodejs20.x"
+    }
+  }
 }
