--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "framework": null,
   "buildCommand": "pnpm prisma generate && pnpm run build",
-  "installCommand": "pnpm install",
-  "functions": {
-    "**/*.func/*": {
-      "runtime": "nodejs20.x"
-    }
-  }
+  "installCommand": "pnpm install"
 }
