chore: update vercel configuration and integrate nitro in vite config
- Added outputDirectory to vercel.json for build output specification.
- Integrated nitro plugin into vite.config.mjs for enhanced performance.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "framework": null,
   "buildCommand": "pnpm prisma generate && pnpm run build",
-  "installCommand": "pnpm install"
+  "installCommand": "pnpm install",
+  "outputDirectory": ".output"
 }
