--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "start": "vinxi start",
+    "start": "node .output/server/index.mjs",
     "prisma-generate": "prisma generate",
     "prisma-studio": "prisma studio",
     "prisma-migrate": "prisma migrate dev",
@@ -58,6 +58,7 @@
     "lucide-react": "^0.511.0",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
+    "nitro": "3.0.1-alpha.1",
     "react": "^19.2.0",
     "react-aria-components": "1.13.0",
     "react-day-picker": "8.10.1",
