refactor: update Prisma client import and enhance singleton pattern; clean up Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "framework": null,
   "buildCommand": "pnpm prisma generate && pnpm run build",
-  "installCommand": "pnpm install",
-  "outputDirectory": ".output"
+  "installCommand": "pnpm install"
 }
