--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@tanstack/react-start": "^1.134.7",
     "@tanstack/react-table": "8.21.3",
     "@tanstack/start": "^1.120.20",
+    "@types/lodash": "4.17.21",
+    "@types/lodash-es": "4.17.12",
     "@uidotdev/usehooks": "~2.4.1",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -55,6 +57,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "12.23.24",
+    "lodash": "4.17.21",
+    "lodash-es": "4.17.22",
     "lucide-react": "^0.511.0",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
