Add BalanceActions, simplify TotalBalance, add sileo
Introduce a new BalanceActions component that renders an icon trigger for AddTransactionButton (AddTransactionButton now accepts a customTrigger prop). Remove legacy balance UI components (BalanceDisplay, BalanceEditor, BalanceEditorActions) and simplify TotalBalance to a minimal centered display (previous card UI left commented). Wire BalanceActions into the home route and remove the inline add button from the transactions list. Add the sileo dependency and update pnpm-lock.yaml accordingly.

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.4",
     "redaxios": "^0.5.1",
+    "sileo": "^0.1.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "vinxi": "0.5.3",
