refactor: update API imports and restructure server functions
- Removed the old server function imports and replaced them with updated paths for user, transaction, and category APIs.
- Added new server functions for handling category and transaction operations, including CRUD operations.
- Updated PostCSS configuration to remove the deprecated file.
- Adjusted route definitions to ensure trailing slashes are consistent across the application.
- Fixed TypeScript configuration for module resolution.
- Integrated Tailwind CSS into the Vite configuration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "isolatedModules": true,
     "resolveJsonModule": true,
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     },
     "noEmit": true,
-    "types": []
+    "types": ["vite/client"]
   }
 }
