--- a/package.json
+++ b/package.json
@@ -42,12 +42,11 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tanstack/react-query": "^5.90.6",
-    "@tanstack/react-router": "^1.134.4",
-    "@tanstack/react-router-devtools": "^1.134.4",
-    "@tanstack/react-start": "^1.134.7",
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-router": "^1.162.8",
+    "@tanstack/react-router-devtools": "^1.162.8",
+    "@tanstack/react-start": "^1.162.8",
     "@tanstack/react-table": "8.21.3",
-    "@tanstack/start": "^1.120.20",
     "@types/lodash": "4.17.21",
     "@types/lodash-es": "4.17.12",
     "@uidotdev/usehooks": "~2.4.1",
@@ -59,7 +58,7 @@
     "framer-motion": "12.23.24",
     "lodash": "4.17.21",
     "lodash-es": "4.17.22",
-    "lucide-react": "^0.511.0",
+    "lucide-react": "^0.575.0",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "nitro": "3.0.1-alpha.1",
@@ -73,14 +72,14 @@
     "redaxios": "^0.5.1",
     "sileo": "^0.1.5",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.5.0",
     "vinxi": "0.5.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@tailwindcss/postcss": "^4.1.16",
+    "@tailwindcss/vite": "^4.2.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -94,7 +93,6 @@
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "5.1.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
@@ -110,11 +108,10 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "30.0.0-beta.3",
     "jsdom": "^26.1.0",
-    "postcss": "^8.5.6",
     "prettier": "3.5.3",
     "prisma": "^6.18.0",
     "react-test-renderer": "^19.2.0",
-    "tailwindcss": "^4.1.16",
+    "tailwindcss": "^4.2.1",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
