--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@base-ui/react": "^1.2.0",
     "@dicebear/collection": "~9.2.4",
     "@dicebear/core": "~9.2.4",
     "@hookform/resolvers": "^5.2.2",
@@ -55,24 +56,29 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "12.23.24",
+    "input-otp": "^1.4.2",
     "lodash": "4.17.21",
     "lodash-es": "4.17.22",
     "lucide-react": "^0.575.0",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "nitro": "3.0.1-alpha.1",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-aria-components": "1.13.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "9.13.2",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.4",
+    "react-resizable-panels": "^4.6.5",
+    "recharts": "2.15.4",
     "redaxios": "^0.5.1",
     "sileo": "^0.1.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.5.0",
+    "vaul": "^1.1.2",
     "vinxi": "0.5.3",
     "zod": "^3.25.76"
   },
