fix: reorder path aliases in tsconfig.json for consistency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"],
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "~/*": ["./src/*"]
     },
     "noEmit": true,
     "types": ["vite/client"]
