--- a/package.json
+++ b/package.json
@@ -68,13 +68,14 @@
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-aria-components": "1.13.0",
-    "react-day-picker": "9.13.2",
+    "react-day-picker": "9.14.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^4.6.5",
     "recharts": "2.15.4",
     "redaxios": "^0.5.1",
+    "shadcn": "^3.8.5",
     "sileo": "^0.1.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.5.0",
